--- a/templates/automobile.html
+++ b/templates/automobile.html
@@ -9,9 +9,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="title" content="Our Team | Solving Scale AI">
+	<meta name="title" content="Artificial intelligence in automobile sector - Solving Scale AI">
 	<meta name="description"
-		content="Our Team comes from diverse educational and professional backgrounds from prestigious institutes around the world to leading corporate and startups.">
+		content="Get a rid of from manufacturing inefficiency to supply threat prevention in automobile industry, Artificial intelligence can solve all these problems more efficiently than any other option.">
 	<meta name="keywords"
 		content="Our team, team solving scale.ai , Ai consulting services, deep learning, computer vision company">
 	<meta name="author" content="solvingscaleAi">
@@ -148,7 +148,7 @@ Fixed Navigation
 			<!-- logo -->
 			<a class="navbar-brand d-inline-block align-top " href="{%url 'index'%}">
 				<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}"
-					alt="solvingscale.ai" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
+					alt="solving scale AI logo" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
 			</a>
 			<!-- <a href="" class="d-none d-lg-block ml-auto"><span >SolvingScaleAI</span></a> -->
 			<!-- /logo -->
@@ -196,7 +196,7 @@ End Fixed Navigation
 				</p>
 			</div>
 			<div class="col-md-6">
-				<img src="{%static '/images/automobile.gif'%}" style="width: 100%;" alt="solvingscale.ai automobile">
+				<img src="{%static '/images/automobile.gif'%}" style="width: 100%;" alt="artifical intelligence in automobile">
 			</div>
 		</div><br>
 		<h2 class="text-center" data-aos="fade-down" data-aos-duration="600">Challenges Faced by the Automobile Sector
