--- a/templates/company.html
+++ b/templates/company.html
@@ -9,9 +9,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="title" content="Retail and Retail Security | Automotive | Customized solutions">
+	<meta name="title" content="Artificial intelligence based company - Solving Scale AI">
 	<meta name="description"
-		content="Retail Analysis, Automating Product Safety, Customized solutions through Solving scale’s AI-powered solutions, focuses on making machines intelligent and capable of solving problems.">
+		content="Solving Scale AI is an artificial intelligence based company that develops AI software by integrating computer vision and deep learning models to solve different problems.">
 	<meta name="keywords"
 		content="face recognition, object detection, retail ai, ai in retail, online tailoring, visual trial room, unusual activity in stores, stores, crowd management, retail stores, security in retail, security in stores, security in malls, theft monitoring, product security, product monitoring, security">
 	<meta name="author" content="SolvingScaleAI">
@@ -124,7 +124,7 @@ Fixed Navigation
 			<!-- logo -->
 			<a class="navbar-brand d-inline-block align-top " href="{%url 'index'%}">
 				<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}"
-					alt="solvingscale.ai" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
+					alt="solving scale AI logo" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
 			</a>
 			<!-- <a href="" class="d-none d-lg-block ml-auto"><span >SolvingScaleAI</span></a> -->
 			<!-- /logo -->
@@ -196,7 +196,7 @@ Start About Section
 
 
 				<div class="col-md-6">
-					<img src="{%static '/images/about/about-2.png'%}" class="img-fluid" alt="">
+					<img src="{%static '/images/about/about-2.png'%}" class="img-fluid" alt="About solving scale AI">
 				</div>
 				<div class="col-md-6">
 
