--- a/templates/consulting.html
+++ b/templates/consulting.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Consultation for Artificial intelligence services ">
+    <meta name="description"
+        content="Get all type of consultation regarding for your Artificial intelligence requirements for retails, healthcare, smart city from solving scale AI.">
     <meta name="Keywords"
         content="AI Solutions, AI in Healthcare, AI in Construction, AI in Retail, AI in Automobile, AI in Customerised Services ">
 
@@ -190,7 +193,7 @@
             <!-- logo -->
             <a class="navbar-brand d-inline-block align-top " href="{%url 'index'%}">
                 <img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}"
-                    alt="solvingscale.ai" title="solvingscale.ai" style="width: 35%;border-radius: 50%;" />
+                    alt="solving scale AI logo" title="solvingscale.ai" style="width: 35%;border-radius: 50%;" />
             </a>
             <!-- <a href="" class="d-none d-lg-block ml-auto"><span >SolvingScaleAI</span></a> -->
             <!-- /logo -->
@@ -275,13 +278,14 @@
                     hospitals, its hard to take care of the patient and staff of the hospitals. We provide a
                     solution to
                     overcome this problem.</p>
-                <button class="btn btn-outline-primary" onclick="location.href = 'healthcare'">Know
+                <button class="btn btn-outline-primary" onclick="location.href = 'artificial-intelligence-in-healthcare'">Know
                     More</button>
             </div>
             <div class="col-md-6 my-auto p-3">
                 <video style="width:100%; border-radius: 10px;" autoplay loop muted>
                     <source src="{%static '/images/vid3.webm'%}" type="video/webm">
                     <source src="{%static '/images/vid3.mp4'%}" type="video/mp4">
+                    artificial intelligence in healthcare 
                 </video>
             </div>
         </div>
@@ -292,6 +296,7 @@
                 <video style="width:100%; border-radius: 10px;" autoplay loop muted>
                     <source src="{%static '/images/vid1.webm'%}" type="video/webm">
                     <source src="{%static '/images/vid1.mp4'%}" type="video/mp4">
+                    artifical intelligence  in cosntruction
                 </video>
             </div>
             <div class="col-md-6 my-auto p-5">
@@ -304,7 +309,7 @@
                     factors that contribute to construction site injuries and fatalities. The leading causes of
                     worker deaths on construction sites are Falls, Getting struck by an object, Electrocution,
                     Pipefitter Accidents, Equipment failure, etc.</p>
-                <button class="btn btn-outline-primary" onclick="location.href = 'construction'">Know More</button>
+                <button class="btn btn-outline-primary" onclick="location.href = 'artificial-intelligence-in-construction'">Know More</button>
             </div>
         </div>
 
@@ -317,12 +322,13 @@
                     include the product quality, but also user experience. We always look to provide that
                     satisfaction. In today's era, user experience is the most important thing matters. We provide an
                     AI solution to overcome security and retail factors .</p>
-                <button class="btn btn-outline-primary" onclick="location.href = 'retail'">Know More</button>
+                <button class="btn btn-outline-primary" onclick="location.href = 'artificial-itelligence-in-retail'">Know More</button>
             </div>
             <div class="col-md-6 my-auto p-3">
                 <video style="width:100%; border-radius: 10px;" autoplay loop muted>
                     <source src="{%static '/images/vid2.webm'%}" type="video/webm">
                     <source src="{%static '/images/vid2.mp4'%}" type="video/mp4">
+                    artifical intelligence for retail
                 </video>
             </div>
         </div>
@@ -333,7 +339,7 @@
         <div class="row my-5 text-center grow " style=" border-radius: 10px;">
             <div class="col-md-6 my-auto p-3">
                 <img src="{%static '/images/customized.gif'%}" style="width:100%; border-radius: 10px;"
-                    alt="solvingscale.ai customized services">
+                    alt="artifical intelligence for smart city">
             </div>
             <div class="col-md-6 my-auto p-3">
 
@@ -346,7 +352,7 @@
                     threattening object detection, Car name and brand recognition, Crowd counting, Face recogntion,
                     Quarrel detection, Fire and smoke detection, Intrusion detection, camera tampering, Fall Detection,
                     etc.</p>
-                <button class="btn btn-outline-primary" onclick="location.href = 'smartcity'">Know More</button>
+                <button class="btn btn-outline-primary" onclick="location.href = 'artificial-intelligence-for-smart-city'">Know More</button>
             </div>
         </div>
 
@@ -358,11 +364,11 @@
                     require long-term concentration. Drivers
                     must keep a close eye on the road, so they can react to sudden events immediately. Driver
                     fatigue often becomes a direct cause of many traffic accidents.</p>
-                <button class="btn btn-outline-primary" onclick="location.href = 'automobile'">Know More</button>
+                <button class="btn btn-outline-primary" onclick="location.href = 'articial-intelligence-in-automobile'">Know More</button>
             </div>
             <div class="col-md-6 my-auto p-3">
                 <img src="{%static '/images/automobile3.gif'%}" style="width:100%; border-radius: 10px;"
-                    alt="solvingscale.ai automobile services">
+                    alt="artifical intelligence in automobile">
             </div>
         </div>
 
@@ -375,7 +381,7 @@
         <div class="formdiv second" id="consulation">
             <div class="row text-center">
                 <div class="col-md-6 my-auto"><br>
-                 
+
                     <div class="row my-5 ">
                         <div class="col-1"></div>
                         <div class="col text-right">
@@ -434,7 +440,7 @@
                                         <option value="RETAIL">RETAIL</option>
                                     </select>
                                 </div>
-                       
+
                                 <div class="form-group">
 
                                     <textarea class="form-control" name="need"
