--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,8 +10,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="title"
-		content="Contact Details: 615, Apollo Premier, Vijay Nagar Square, Indore, Madhya Pradesh, India, 452001">
-	<meta name="description" content="For more details about our company please contact @ info@solvingscale.ai">
+		content="Contact us for Artificial intelligence services in Hyderabad and Indore.">
+	<meta name="description" content="Solving scale AI, An artificial intelligence services provider company in India has it premises Indore and Hyderabad. contact us on given physical address.">
 	<meta name="keywords"
 		content="Contact us, AI company, ai solutions,face recogition,attendance management system, ERP, computer vision syndrome.">
 	<meta name="author" content="solvingscaleAi">
@@ -167,7 +167,7 @@ Fixed Navigation
 			<!-- logo -->
 			<a class="navbar-brand d-inline-block align-top " href="{%url 'index'%}">
 				<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}"
-					alt="solvingscale.ai" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
+					alt="solving scale AI logo" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
 			</a>
 			<!-- <a href="" class="d-none d-lg-block ml-auto"><span >SolvingScaleAI</span></a> -->
 			<!-- /logo -->
