--- a/templates/customize.html
+++ b/templates/customize.html
@@ -9,9 +9,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="title" content="Our Team | Solving Scale AI">
+	<meta name="title" content="Artificial intelligence applications for smart city - Solving scale AI">
 	<meta name="description"
-		content="Our Team comes from diverse educational and professional backgrounds from prestigious institutes around the world to leading corporate and startups.">
+		content="Application of Artificial intelligence can play a vital role in developing an identical smart city project by detecting  the daily pitfalls like vehicle collision, violation rate.">
 	<meta name="keywords"
 		content="Our team, team solving scale.ai , Ai consulting services, deep learning, computer vision company">
 	<meta name="author" content="solvingscaleAi">
@@ -155,7 +155,7 @@ Fixed Navigation
 			<!-- logo -->
 			<a class="navbar-brand d-inline-block align-top " href="{%url 'index'%}">
 				<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}"
-					alt="solvingscale.ai" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
+					alt="solving scale AI logo" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
 			</a>
 			<!-- <a href="" class="d-none d-lg-block ml-auto"><span >SolvingScaleAI</span></a> -->
 			<!-- /logo -->
@@ -205,12 +205,12 @@ End Fixed Navigation
 				</p>
 			</div>
 			<div class="col-md-6">
-				<img src="{%static '/images/smartcity.gif'%}" style="width: 100%;" alt="solvingscale.ai smartcity">
+				<img src="{%static '/images/smartcity.gif'%}" style="width: 100%;" alt="artifical intelligence for smart city">
 			</div>
 		</div><br><br>
 		<div class="text-center">
 
-			<img src="{%static '/images/building.png'%}" alt="">
+			<img src="{%static '/images/building.png'%}" alt="artifical intelligence for smart city">
 		</div>
 		<h2 class="text-center" data-aos="fade-down" data-aos-duration="1000">Challenges Faced in Cities</h2><br>
 		<p class="text-center" data-aos="zoom-in" data-aos-duration="2000">Security and monitoring has always been the
