--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="title" content="Solving Scale AI | Solving Problems with AI | AI Consulting Company">
+	<meta name="title" content="Artificial Intelligence service providers India">
 	<meta name="description"
-	content="Solving Scale AI, a computer vision company that aims of providing affordable & accurate AI software’s,minimizes human monitoring of camera which focus on Facial & Optical Character Recognition, Augmented Reality, Self-driving cars.">
+	content="Solving scale AI, one of the top rated artificial intelligence service providers in India for retail, construction, smart city and health care sector to leverage for artificial intelligence.">
 	<meta name="Keywords"
 	content="AI Company, AI Company in Indore, Best AI Company, AI Technology, Artificial Intelligence Company, AI Company in Consulting, AI in Healthcare, AI in Customerised Services, AI in Retail, Top AI Company, Consulting, High end AI Company, Enterprise AI, AI and Machine Learning Company, 24/7 AI Company, Clear View Facial Recognition  ">
 	<meta name="author" content="SolvingScaleAI">
@@ -160,7 +160,7 @@ Fixed Navigation
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<!-- logo -->
 				<a class="navbar-brand d-inline-block align-top " href="{%url 'index'%}">
-					<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}" alt="logo"
+					<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}" alt="solving scale AI logo"
 						style="width: 56%;border-radius: 50%;" title="solvingscale.ai" />
 				</a>
 				<!-- <a href="" class="d-none d-lg-block ml-auto"><span >SolvingScaleAI</span></a> -->
