--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -113,7 +113,7 @@ Fixed Navigation
 			<!-- logo -->
 			<a class="navbar-brand d-inline-block align-top " href="{%url 'index'%}">
 				<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}"
-					alt="solvingscale.ai" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
+					alt="solving scale AI logo" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
 			</a>
 			<!-- <a href="" class="d-none d-lg-block ml-auto"><span >SolvingScaleAI</span></a> -->
 			<!-- /logo -->
