--- a/templates/retail.html
+++ b/templates/retail.html
@@ -9,9 +9,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="title" content="Our Team | Solving Scale AI">
+	<meta name="title" content="Artificial intelligence in retail Sector - Solving Scale AI ">
 	<meta name="description"
-		content="Our Team comes from diverse educational and professional backgrounds from prestigious institutes around the world to leading corporate and startups.">
+		content="Artificial Intelligence can solve all problems related with store super vision, work dismantlement, manual monitoring, security compliance and supply threat prevention.">
 	<meta name="keywords"
 		content="Our team, team solving scale.ai , Ai consulting services, deep learning, computer vision company">
 	<meta name="author" content="solvingscaleAi">
@@ -144,7 +144,7 @@ Fixed Navigation
 			<!-- logo -->
 			<a class="navbar-brand d-inline-block align-top " href="{%url 'index'%}">
 				<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}"
-					alt="solvingscale.ai" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
+					alt="solving scale AI logo" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
 			</a>
 			<!-- <a href="" class="d-none d-lg-block ml-auto"><span >SolvingScaleAI</span></a> -->
 			<!-- /logo -->
@@ -192,7 +192,7 @@ End Fixed Navigation
 				</p>
 			</div>
 			<div class="col-md-6">
-				<img src="{%static '/images/retail1.gif'%}" style="width: 100%;" alt="solvingscale.ai Retail">
+				<img src="{%static '/images/retail1.gif'%}" style="width: 100%;" alt="artifical intelligence for retail">
 			</div>
 		</div><br>
 		<h2 class="text-center" data-aos="fade-down" data-aos-duration="600">Challenges Faced by the Retail Sector</h2>
